<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="app_title">App</string>
    <string name="app_name">App</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    
    
    
    
    <string name="sample_sample_tab_activity_title">Sample</string>
    <string name="mtom_mtom_tab_activity_title">MtoM</string>
    
    <!-- Main Drawer Menu -->
    <string name="main_left_drawer_menu_open">Left Open</string>
    <string name="main_left_drawer_menu_close">Left Close</string>
    
    
    
    <!-- crash messages -->
    <string name="crash_toast_text">Crash가 발생했어요!</string>
    <string name="crash_dialog_title">Application 문제 리포팅</string>
    <string name="crash_dialog_text">확인을 누르시면 서버로 에러를 리포팅합니다.</string>
    <string name="crash_dialog_ok_toast">빠른 수정 적용하겠습니다.</string>
    
    
    
    
    
    
    
    
    
    
    
    <!-- error messages -->
    <string name="error_message_for_account_register_activity_to_nickname">닉네임 입력해 주세요.</string>
    <string name="error_message_for_account_register_activity_to_category">멘토 카테고리 입력해 주세요.</string>
    <string name="error_message_for_account_register_activity_to_sex">Please select a gender.</string>
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    <!-- confirmation messages -->
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    
    <!--  common error messages -->
    <string name="error_message_for_maintenance">Our service is temporarily shut down for maintenance. We apologize for any inconvenience. </string>    
    <string name="error_message_for_unknown_error">An unexpected error has occurred. Please try again later.\nIf this error continues to occur, please reboot your device and if this error continues after reboot, please contact us through our website.</string>
    <string name="error_messsage_for_unknown_server_code">An unexpected error has occurred.\nIt may be a temporary error in the server or network connection.\nKakaoTalk is currently identifying and responding to this problem.(%1$s)</string>
    <string name="error_message_for_too_many_request">Transmission Overload \n\nPlease try again later.</string>
    <string name="error_message_for_service_unavailable">Cannot connect to the server. \nPlease try again later.</string>
    <string name="error_message_for_network_is_unavailable">Network connection is unstable. \nPlease check your Wi-Fi or 3G network connection.</string>
    <string name="error_message_for_disk_full">Not enough disk space. Please free more disk space and try again.</string>
    <string name="error_message_for_network_is_unavailable_cause_unauthorized_network">The Wi-Fi connection is not available. \n\nPlease check the network connection and try again later.</string>
    <string name="error_message_for_banned_user">Your KakaoTalk access has been temporarily suspended according to our service policy. If you have inquiries, follow the link below. \nhttp://www.kakao.com/talk/en/contact</string>
    <string name="error_message_for_mismatch_another_field">The information you have entered is incorrect.</string>    
    
    <!-- Notification Messages -->
    <string name="message_for_waiting_dialog">Please wait...</string>
    <string name="message_for_loading_dialog">Loading...</string>
    
    <!--  verification -->
    <string name="title_for_need_to_update">Update</string>
    <string name="message_for_need_to_update">Update Needed</string>
    
    
    
    
    
    
    
    
    
    
    
    
    <string name="mtom_auth_member_register_intro_msg">당신에게는 어떤 재능이 있으신지요? 당신이 갖고 있는 능력이 누군가에게는 큰 도움이 될 수 있습니다.\n\n
       							어떤 분야에 Mento가 되실지 입력해 주십시요.</string>
    
    <string name="mtom_auth_member_register_nickname_comment">닉네임을 입력해 주세요.</string>
    
    <string name="mtom_auth_member_register_sex_comment">성별을 선택해 주십시요.</string>
    
    <string name="mtom_auth_member_register_filed_title_sex_male">남성</string>
    <string name="mtom_auth_member_register_filed_title_sex_female">여성</string>
    
    
    
    
    <string name="mtom_auth_member_register_btn">등록하기</string>
    
   
    
    
    

    
    
    
    
    
    <string name="sample_activity_main_activity_title">Sample - 1. ActivityOpenActivity</string>
    <string name="sample_activity_sub_activity_title">ActivityOpenSubActivity</string>
    
    
    <string name="sample_view_view_object_activity">Sample - 2. ViewObjectTestActivity</string>
    
    <string name="sample_view_list_view_activity_title">Sample - 3. ListViewActivity</string>
    <string name="sample_view_list_view_detail_activity_title">ListViewDetailActivity</string>
    
    
    <string name="sample_graphic_graph_activity_title">Graph Activity</string>
    
    
    <string name="sample_broadcast_broadcast_activity_title">Broadcast Activity</string>
    
    
    <string name="sample_service_activity_title">Service Activity</string>
    
    
    <string name="sample_db_db_activity_title">DBActivity</string>
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    <string name="mtom_title">MtoM</string>
    
    
    <!-- Service : MtoM : friend -->
    <string name="mtom_news_feed_title">뉴스피드</string>
    
    
    
    <!-- Service : MtoM : Member -->
    <string name="mtom_member_title">회원가입</string>
    
    
    <!-- Service : MtoM : MyRoom -->
    <string name="mtom_myroom_title">MyRoom</string>
    
    
    <!-- Service : MtoM : friend -->
    <string name="mtom_friend_title">친구목록</string>
    
    
    <!-- Service : MtoM : chat -->
    <string name="mtom_chat_title">Chat</string>
    
    
    <!-- Service : MtoM : search -->
    <string name="mtom_search_title">Search</string>
    
    <!-- Service : MtoM : more -->
    <string name="mtom_more_title">More</string>
    
    
</resources>