<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >


        
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
	
       	
       

        
        
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:text="@string/mtom_auth_member_register_nickname_comment"
            android:textIsSelectable="false" />

        
        <EditText
            android:id="@+id/nickname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true">
		</EditText>
		
        
        
        
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:text="@string/mtom_auth_member_register_nickname_comment" />
        
        <EditText
            android:id="@+id/nickname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true">
		</EditText>
        
        
        
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
	    android:text="@string/mtom_auth_member_register_sex_comment" />
    
		
        
        
    
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
			<RadioGroup 
	           	android:id="@+id/sex_group"
	         	android:layout_width="fill_parent"
	         	android:layout_height="match_parent"
	         	android:orientation="horizontal">
         	
		        <RadioButton
		            android:id="@+id/male"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textColor="@color/black"
		            android:text="@string/mtom_auth_member_register_filed_title_sex_male"
		            android:layout_weight="1" />
		
		        <RadioButton
		            android:id="@+id/female"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textColor="@color/black"
		            android:text="@string/mtom_auth_member_register_filed_title_sex_female"
		            android:layout_weight="1" />
	        
			</RadioGroup>
		</LinearLayout>
        
        
	    
	    
	     <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:text="@string/mtom_auth_member_register_intro_msg" />

        
        <EditText
            android:id="@+id/category"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" >
		</EditText>
	
        
        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:text="@string/mtom_auth_member_register_btn" />
        
    
    
    </LinearLayout>
    
    
    

</LinearLayout>